Add my starting web page from HTML5up template
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -1,1 +1,176 @@
-Hello World
+<!doctype html>
+<!--[if lt IE 7 ]> <html class="ie ie6 ie-lt10 ie-lt9 ie-lt8 ie-lt7 no-js" lang="en"> <![endif]-->
+<!--[if IE 7 ]> <html class="ie ie7 ie-lt10 ie-lt9 ie-lt8 no-js" lang="en"> <![endif]-->
+<!--[if IE 8 ]> <html class="ie ie8 ie-lt10 ie-lt9 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]> <html class="ie ie9 ie-lt10 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
+
+<html>
+
+	<head>
+		<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Diogo Luvizon</title>
+    <meta name="author" content="Diogo Luvizon" />
+    <meta name="description" content="Luvizon's web page" />
+    <meta name="Copyright" content="Diogo Luvizon" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+    <!-- Twitter: see https://dev.twitter.com/docs/cards/types/summary-card for details -->
+    <meta name="twitter:card" content="">
+    <meta name="twitter:site" content="">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:url" content="">
+    <!-- Facebook (and some others) use the Open Graph protocol: see http://ogp.me/ for details -->
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
+
+	</head>
+
+	<body id="top">
+
+		<!-- Header -->
+    <header id="header">
+      <div class="inner">
+        <a href="#" class="image avatar"><img src="https://avatars0.githubusercontent.com/u/579373" alt="" /></a>
+        <h1>Diogo Luvizon</h1>
+        <p>PhD Student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS lab</a> / <br />
+        <a target="_blank" href="http://www.u-cergy.fr" class="icon">Université de Cergy-Pontoise</a>.</p>
+
+        <nav></br>
+          <a href="#about">About me</a></br>
+          <a href="#vitae">Curriculum Vitae</a></br>
+          <a href="#publications">Publications</a></br>
+          <a href="#code">Code</a></br>
+          <a href="#contact">Contact</a>
+        </nav>
+
+      </div>
+    </header>
+
+		<!-- Main -->
+    <div id="main">
+
+      <!-- About -->
+      <section id="about">
+        <header class="major">
+          <h2>About me</h2>
+        </header>
+        <p>I am currently PhD student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS</a> laboratory</p>
+      </section>
+
+      <!-- Two -->
+      <section id="vitae">
+        <h2>Curriculum Vitae</h2>
+        <div class="row">
+          <article class="6u 12u$(xsmall) work-item">
+            <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+            <h3>Magna sed consequat tempus</h3>
+            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+          </article>
+          <article class="6u$ 12u$(xsmall) work-item">
+            <a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+            <h3>Ultricies lacinia interdum</h3>
+            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+          </article>
+        </div>
+        <ul class="actions">
+          <li><a href="#" class="button">Link to my CV in PDF</a></li>
+        </ul>
+      </section>
+
+      <!-- Three -->
+        <section id="three">
+          <h2>Get In Touch</h2>
+          <p>Accumpsum dolor.</p>
+          <div class="row">
+            <div class="8u 12u$(small)">
+              <form method="post" action="#">
+                <div class="row uniform 50%">
+                  <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+                  <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+                  <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+                </div>
+              </form>
+              <ul class="actions">
+                <li><input type="submit" value="Send Message" /></li>
+              </ul>
+            </div>
+            <div class="4u$ 12u$(small)">
+              <ul class="labeled-icons">
+                <li>
+                  <h3 class="icon fa-home"><span class="label">Address</span></h3>
+                  1234 Somewhere Rd.<br />
+                  Nashville, TN 00000<br />
+                  United States
+                </li>
+                <li>
+                  <h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
+                  000-000-0000
+                </li>
+                <li>
+                  <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
+                  <a href="#">hello@untitled.tld</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+    </div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://github.com/dluvizon" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/DiogoLuvizon" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/diogoluvizon/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#three" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            <li><a href="http://lattes.cnpq.br/9871965222373987" class="icon">Lattes<span class="label">Lattes</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Copyright Diogo Luvizon, 2017.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="assets/js/main.js"></script>
+
+    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write("<script src='assets/js/libs/jquery-1.11.3.min.js'>\x3C/script>")</script>
+
+    <!-- Asynchronous google analytics; this is the official snippet.
+       Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-XXXXXX-XX', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    -->
+
+	</body>
+
+</html>
