--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
         <header class="major">
           <h2>About me</h2>
         </header>
-        <p>I am currently PhD student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS</a> laboratory</p>
+        <!-- <p>I am currently PhD student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS</a> laboratory</p> -->
+        <p>Under construction...</p>
       </section>
 
-      <!-- Two -->
+      <!-- Vitae -->
       <section id="vitae">
         <h2>Curriculum Vitae</h2>
         <div class="row">
@@ -84,42 +85,28 @@
           </article>
         </div>
         <ul class="actions">
-          <li><a href="#" class="button">Link to my CV in PDF</a></li>
+          <li><a href="data/cv.pdf" class="button">Link to my CV in PDF</a></li>
         </ul>
       </section>
 
-      <!-- Three -->
-        <section id="three">
-          <h2>Get In Touch</h2>
-          <p>Accumpsum dolor.</p>
+      <!-- Contact -->
+        <section id="contact">
+          <h2>Contact</h2>
           <div class="row">
-            <div class="8u 12u$(small)">
-              <form method="post" action="#">
-                <div class="row uniform 50%">
-                  <div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-                  <div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-                  <div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-                </div>
-              </form>
-              <ul class="actions">
-                <li><input type="submit" value="Send Message" /></li>
-              </ul>
-            </div>
-            <div class="4u$ 12u$(small)">
+            <div class="6u$ 12u$(small)">
               <ul class="labeled-icons">
                 <li>
                   <h3 class="icon fa-home"><span class="label">Address</span></h3>
-                  1234 Somewhere Rd.<br />
-                  Nashville, TN 00000<br />
-                  United States
+                  6 Avenue du Ponceau,<br />
+                  F-95000 Cergy-Pontoise, France
                 </li>
                 <li>
                   <h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-                  000-000-0000
+                  +33 01 30 73 62 92
                 </li>
                 <li>
                   <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                  <a href="#">hello@untitled.tld</a>
+                  <a href="#">diogo.luvizon@ensea.fr</a>
                 </li>
               </ul>
             </div>
@@ -135,7 +122,7 @@
 						<li><a href="https://github.com/dluvizon" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://twitter.com/DiogoLuvizon" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.instagram.com/diogoluvizon/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#three" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="#contact" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
             <li><a href="http://lattes.cnpq.br/9871965222373987" class="icon">Lattes<span class="label">Lattes</span></a></li>
 					</ul>
 					<ul class="copyright">
