--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Diogo Luvizon</title>
-    <meta name="author" content="Diogo Luvizon" />
+    <title>Diogo C. Luvizon</title>
+    <meta name="author" content="Diogo C. Luvizon" />
     <meta name="description" content="Luvizon's web page" />
-    <meta name="Copyright" content="Diogo Luvizon" />
+    <meta name="Copyright" content="Diogo C. Luvizon" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -42,14 +42,14 @@
     <header id="header">
       <div class="inner">
         <a href="#" class="image avatar"><img src="https://avatars0.githubusercontent.com/u/579373" alt="" /></a>
-        <h1>Diogo Luvizon</h1>
+        <h1>Diogo C. Luvizon</h1>
         <p>PhD Student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS lab</a> / <br />
         <a target="_blank" href="http://www.u-cergy.fr" class="icon">Université de Cergy-Pontoise</a>.</p>
 
         <nav></br>
-          <a href="#about">About me</a></br>
-          <a href="#vitae">Curriculum Vitae</a></br>
+          <a href="#vitae">Vitae</a></br>
           <a href="#publications">Publications</a></br>
+          <a href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" target="_blank">Google scholar</a></br>
           <a href="#code">Code</a></br>
           <a href="#contact">Contact</a>
         </nav>
@@ -60,18 +60,42 @@
 		<!-- Main -->
     <div id="main">
 
-      <!-- About -->
-      <section id="about">
+      <!-- Vitae -->
+      <section id="vitae">
         <header class="major">
           <h2>About me</h2>
         </header>
-        <!-- <p>I am currently PhD student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS</a> laboratory</p> -->
-        <p>Under construction...</p>
+
+        <p>I am currently PhD candidate (on the last year) jointly at the <a
+          target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS
+          lab</a>
+        and at the Paris Seine Université (Université de Cergy-Pontoise),
+        France, since 2015, under the supervision of <a target="_blank"
+        href="http://perso-etis.ensea.fr/~picard" class="icon">David Picard</a>
+        and <a target="_blank" href="http://perso-etis.ensea.fr/tabia"
+        class="icon">Hedi Tabia</a>. I am also supported by the Brazilian
+        National Council for Scientific and Technological Development (CNPq).  I
+        received my Master's degree on Applied Computing (Graphics and Computer
+        Vision) from PPGCA, Federal University of Technology - Paraná (UTFPR),
+        Brazil, in 2015, and my Bachelor's degree in Electronic Engineering
+        from UTFPR, in 2011.  In between, I have worked in the industry
+        with computer vision applied to embedded and real time systems.
+
+        <h2>Research interests</h2>
+        <p>My research interests are mainly on computer vision and machine
+        learning, specially applied to 3D scenes and to human behaviour
+        understanding.
+        </p>
+
+        <ul class="actions">
+          <li><a target="_blank" href="data/cv.pdf" class="button">Link to my CV (PDF)</a></li>
+        </ul>
       </section>
 
-      <!-- Vitae -->
-      <section id="vitae">
-        <h2>Curriculum Vitae</h2>
+      <!-- Publications -->
+      <section id="publications">
+        <h2>Publications</h2>
+        <p>Here is a list of my most relevant publications:</p>
         <div class="row">
           <article class="6u 12u$(xsmall) work-item">
             <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -84,9 +108,16 @@
             <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
           </article>
         </div>
-        <ul class="actions">
-          <li><a href="data/cv.pdf" class="button">Link to my CV in PDF</a></li>
-        </ul>
+        <p>For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
+      </section>
+
+      <!-- Code -->
+      <section id="code">
+        <h2>Source code </h2>
+        <p>Most of my public source code is on
+        <a href="https://github.com/dluvizon" target="_blank">github</a>,
+        otherwise, a link will appear in my
+        <a href="#publications">publications</a>.</p>
       </section>
 
       <!-- Contact -->
@@ -97,16 +128,19 @@
               <ul class="labeled-icons">
                 <li>
                   <h3 class="icon fa-home"><span class="label">Address</span></h3>
+                  Diogo Luvizon<br />
+                  Office 385<br />
+                  ETIS UMR 8051, ENSEA, CNRS<br />
                   6 Avenue du Ponceau,<br />
                   F-95000 Cergy-Pontoise, France
                 </li>
-                <li>
-                  <h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-                  +33 01 30 73 62 92
-                </li>
+                <!--<li>-->
+                  <!--<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>-->
+                  <!--+33 01 30 73 62 92-->
+                <!--</li>-->
                 <li>
                   <h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-                  <a href="#">diogo.luvizon@ensea.fr</a>
+                  <a href="#contact">diogo dot luvizon at ensea dot fr</a>
                 </li>
               </ul>
             </div>
@@ -119,14 +153,15 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/dluvizon" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://twitter.com/DiogoLuvizon" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/diogoluvizon/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#contact" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-            <li><a href="http://lattes.cnpq.br/9871965222373987" class="icon">Lattes<span class="label">Lattes</span></a></li>
+						<li><a href="https://github.com/dluvizon" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://twitter.com/DiogoLuvizon" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/diogocl" target="_blank" class="icon fa-linkedin"><span class="label">LinkdIn</span></a></li>
+						<!--<li><a href="https://www.instagram.com/diogoluvizon/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
+            <li><a href="http://lattes.cnpq.br/9871965222373987" target="_blank" class="icon">Lattes<span class="label">Lattes</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Copyright Diogo Luvizon, 2017.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Copyright Diogo Carbonera Luvizon, 2018.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
