--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!-- Header -->
     <header id="header">
       <div class="inner">
-        <a href="#" class="image avatar"><img src="https://avatars0.githubusercontent.com/u/579373" alt="" /></a>
+        <a href="#" class="image avatar"><img src="images/photo.jpeg" alt="" /></a>
         <h1>Diogo C. Luvizon</h1>
         <p>PhD Student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS lab</a> / <br />
         <a target="_blank" href="http://www.u-cergy.fr" class="icon">Université de Cergy-Pontoise</a>.</p>
