--- a/index.html
+++ b/index.html
@@ -98,14 +98,17 @@
         <p>Here is a list of my most relevant publications:</p>
         <div class="row">
           <article class="6u 12u$(xsmall) work-item">
-            <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-            <h3>Magna sed consequat tempus</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-          </article>
-          <article class="6u$ 12u$(xsmall) work-item">
-            <a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-            <h3>Ultricies lacinia interdum</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+            <a href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/" target="_blank" class="image fit thumb"><img src="images/its_2016/pic.jpg" alt="" /></a>
+            <h3>A Video-Based System for Vehicle Speed Measurement in Urban Roadways</h3>
+            <p><b>Diogo C. Luvizon, Bogdan Tomoyuki Nassu, Rodrigo Minetto</b>; <i>IEEE Transactions on Intelligent Transportation Systems (ITS)</i>. 2016</p>
+            <p>
+              [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/">web page</a>]
+              [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/Paper_ITS_final.pdf">pdf</a>]
+              [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/OLD/gst-plugin_DETECTOR-MINETTO-2-g534ebc9.tar.bz2">code</a>]
+              [<a target="_blank" href="http://www.youtube.com/watch?v=3IaKJuZN55k">demo</a>]
+              [<a target="_blank" href="data/its_2016/bib.txt">bibtex</a>]
+              [<a target="_blank" href="https://ieeexplore.ieee.org/document/7576700/">ieeexplore</a>]
+            </p>
           </article>
         </div>
         <p>For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
