--- a/index.html
+++ b/index.html
@@ -96,13 +96,39 @@
       <section id="publications">
         <h2>Publications</h2>
         <p>Here is a list of my most relevant publications:</p>
-        <div class="row">
+        <!--<div class="row">-->
+        <div>
+
+          <article class="6u 12u$(xsmall) work-item">
+            <a href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/0131.pdf" target="_blank" class="image fit thumb"><img src="images/cvpr_2018/pic.svg" alt="" /></a>
+            <h3>2D/3D Pose Estimation and Action Recognition Using Multitask Deep Learning</h3>
+            <p><b>Diogo C. Luvizon, David Picard, Hedi Tabia</b>; <i>The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>. 2018</p>
+            <p>
+              [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/0131.pdf">pdf</a>]
+              [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/Supplemental/0131-supp.pdf">supp</a>]
+              [<a target="_blank" href="https://www.youtube.com/watch?v=MNEZACbFA4Y">demo</a>]
+              [<a target="_blank" href="https://github.com/dluvizon/deephar">code</a> will appear soon]
+              [<a target="_blank" href="data/cvpr_2018/bib.txt">bibtex</a>]
+            </p>
+          </article>
+
+          <article class="6u 12u$(xsmall) work-item">
+            <a href="https://hal.archives-ouvertes.fr/hal-01515376/document" target="_blank" class="image fit thumb"><img src="images/prl_2017/pic.png" alt="" /></a>
+            <h3>Learning features combination for human action recognition from skeleton sequences</h3>
+            <p><b>Diogo Carbonera Luvizon, Hedi Tabia, David Picard</b>; <i>Pattern Recognition Letters</i>. 2017</p>
+            <p>
+              [<a target="_blank" href="https://hal.archives-ouvertes.fr/hal-01515376/document">pdf</a>]
+              [<a target="_blank" href="https://github.com/dluvizon/harskel">code</a>]
+              [<a target="_blank" href="data/prl_2017/bib.txt">bibtex</a>]
+              [<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0167865517300326?via%3Dihub">elsevier</a>]
+            </p>
+          </article>
+
           <article class="6u 12u$(xsmall) work-item">
             <a href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/" target="_blank" class="image fit thumb"><img src="images/its_2016/pic.jpg" alt="" /></a>
             <h3>A Video-Based System for Vehicle Speed Measurement in Urban Roadways</h3>
             <p><b>Diogo C. Luvizon, Bogdan Tomoyuki Nassu, Rodrigo Minetto</b>; <i>IEEE Transactions on Intelligent Transportation Systems (ITS)</i>. 2016</p>
             <p>
-              [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/">web page</a>]
               [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/Paper_ITS_final.pdf">pdf</a>]
               [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/OLD/gst-plugin_DETECTOR-MINETTO-2-g534ebc9.tar.bz2">code</a>]
               [<a target="_blank" href="http://www.youtube.com/watch?v=3IaKJuZN55k">demo</a>]
@@ -110,6 +136,7 @@
               [<a target="_blank" href="https://ieeexplore.ieee.org/document/7576700/">ieeexplore</a>]
             </p>
           </article>
+
         </div>
         <p>For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
       </section>
