Awards and master thesis
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <nav></br>
           <a href="#vitae">Vitae</a></br>
           <a href="#publications">Publications</a></br>
-          <a href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" target="_blank">Google scholar</a></br>
+          <!--<a href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" target="_blank">Google scholar</a></br>-->
           <a href="#code">Code</a></br>
           <a href="#contact">Contact</a>
         </nav>
@@ -137,14 +137,25 @@
             </p>
           </article>
 
+          <p>For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
+
+          <h3>Awards and prizes</h3>
+
+          <p>
+            <b>1st prize</b> on Workshop of Theses and Dissertations (WTD - Master), Conference on Graphics, Patterns and Images (SIBGRAPI), 2016, Brazil.
+            Master's thesis available <a target="_blank" href="http://repositorio.utfpr.edu.br/jspui/bitstream/1/1380/1/CT_PPGCA_M_Luvizon%2C%20Diogo%20Carbonera_2015.pdf">here</a>.
+          </p>
+          <p>
+            2nd prize on Concurso Latino-americano de Dissertações de Mestrado (CLTM), Conferência Latino-americana de Informática (CLEI), 2016, Chile.
+          </p>
+
         </div>
-        <p>For a complete list of publications, please check in my <a target="_blank" href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" class="icon">google scholar</a>.</p>
       </section>
 
       <!-- Code -->
       <section id="code">
         <h2>Source code </h2>
-        <p>Most of my public source code is on
+        <p>Public source related to my work is on
         <a href="https://github.com/dluvizon" target="_blank">github</a>,
         otherwise, a link will appear in my
         <a href="#publications">publications</a>.</p>
