--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         National Council for Scientific and Technological Development (CNPq).  I
         received my Master's degree on Applied Computing (Graphics and Computer
         Vision) from PPGCA, Federal University of Technology - Paraná (UTFPR),
-        Brazil, in 2015, and my Bachelor's degree in Electronic Engineering
+        Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
         from UTFPR, in 2011.  In between, I have worked in the industry
         with computer vision applied to embedded and real time systems.
 
@@ -146,7 +146,7 @@
             Master's thesis available <a target="_blank" href="http://repositorio.utfpr.edu.br/jspui/bitstream/1/1380/1/CT_PPGCA_M_Luvizon%2C%20Diogo%20Carbonera_2015.pdf">here</a>.
           </p>
           <p>
-            2nd prize on Concurso Latino-americano de Dissertações de Mestrado (CLTM), Conferência Latino-americana de Informática (CLEI), 2016, Chile.
+            2nd prize on Concurso Latino-Americano de Dissertações de Mestrado (CLTM), Conferência Latino-Americana de Informática (CLEI), 2016, Chile.
           </p>
 
         </div>
