--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         received my Master's degree on Applied Computing (Graphics and Computer
         Vision) from PPGCA, Federal University of Technology - Paraná (UTFPR),
         Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
-        from UTFPR, in 2011.  In between, I have worked in the industry
+        from UTFPR, in 2011.  In between, I have worked in industry
         with computer vision applied to embedded and real time systems.
 
         <h2>Research interests</h2>
