--- a/index.html
+++ b/index.html
@@ -127,13 +127,23 @@
           <article class="6u 12u$(xsmall) work-item">
             <a href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/" target="_blank" class="image fit thumb"><img src="images/its_2016/pic.jpg" alt="" /></a>
             <h3>A Video-Based System for Vehicle Speed Measurement in Urban Roadways</h3>
-            <p><b>Diogo C. Luvizon, Bogdan Tomoyuki Nassu, Rodrigo Minetto</b>; <i>IEEE Transactions on Intelligent Transportation Systems (ITS)</i>. 2016</p>
+            <p><b>Diogo C. Luvizon, Bogdan T. Nassu, Rodrigo Minetto</b>; <i>IEEE Transactions on Intelligent Transportation Systems (ITS)</i>. 2016</p>
             <p>
               [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/Paper_ITS_final.pdf">pdf</a>]
               [<a target="_blank" href="http://www.dainf.ct.utfpr.edu.br/~rminetto/projects/vehicle-speed/OLD/gst-plugin_DETECTOR-MINETTO-2-g534ebc9.tar.bz2">code</a>]
               [<a target="_blank" href="http://www.youtube.com/watch?v=3IaKJuZN55k">demo</a>]
               [<a target="_blank" href="data/its_2016/bib.txt">bibtex</a>]
               [<a target="_blank" href="https://ieeexplore.ieee.org/document/7576700/">ieeexplore</a>]
+            </p>
+          </article>
+
+          <article class="6u 12u$(xsmall) work-item">
+            <a href="https://ieeexplore.ieee.org/document/6854869/" target="_blank" class="image fit thumb"><img src="images/icassp_2014/pic.png" alt="" /></a>
+            <h3>Vehicle speed estimation by license plate detection and tracking</h3>
+            <p><b>Diogo C. Luvizon, Bogdan T. Nassu, Rodrigo Minetto</b>; <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>. 2014</p>
+            <p>
+              [<a target="_blank" href="data/icassp_2014/bib.txt">bibtex</a>]
+              [<a target="_blank" href="https://ieeexplore.ieee.org/document/6854869/">ieeexplore</a>]
             </p>
           </article>
 
@@ -169,7 +179,7 @@
               <ul class="labeled-icons">
                 <li>
                   <h3 class="icon fa-home"><span class="label">Address</span></h3>
-                  Diogo Luvizon<br />
+                  Diogo C. Luvizon<br />
                   Office 385<br />
                   ETIS UMR 8051, ENSEA, CNRS<br />
                   6 Avenue du Ponceau,<br />
