--- a/index.html
+++ b/index.html
@@ -152,12 +152,17 @@
           <h3>Awards and prizes</h3>
 
           <p>
-            <b>1st prize</b> on Workshop of Theses and Dissertations (WTD - Master), Conference on Graphics, Patterns and Images (SIBGRAPI), 2016, Brazil.
+            <highlight>1st prize</highlight> on Workshop of Theses and Dissertations (WTD - Master), Conference on Graphics, Patterns and Images (SIBGRAPI), 2016, Brazil.
             Master's thesis available <a target="_blank" href="http://repositorio.utfpr.edu.br/jspui/bitstream/1/1380/1/CT_PPGCA_M_Luvizon%2C%20Diogo%20Carbonera_2015.pdf">here</a>.
           </p>
           <p>
             2nd prize on Concurso Latino-Americano de Dissertações de Mestrado (CLTM), Conferência Latino-Americana de Informática (CLEI), 2016, Chile.
           </p>
+
+          <h3>Patent</h3>
+            <p>
+              <b>LUVIZON, DIOGO C.</b>; MINETTO, RODRIGO; NASSU, B. T. "Sistema para Medição de Velocidade Instantânea e Média de Veículos por Reconhecimento de Padrões em Imagens e Vídeos Digitais", INPI - Instituto Nacional da Propriedade Industrial, Registro No. <b>BR10201503191</b>, 2015 (Brazil, in portuguese).
+            </p>
 
         </div>
       </section>
@@ -165,9 +170,9 @@
       <!-- Code -->
       <section id="code">
         <h2>Source code </h2>
-        <p>Public source related to my work is on
-        <a href="https://github.com/dluvizon" target="_blank">github</a>,
-        otherwise, a link will appear in my
+        <p>Public source code related to my work is available on
+        <a href="https://github.com/dluvizon" target="_blank">github</a>.
+        Otherwise, a link will appear in my
         <a href="#publications">publications</a>.</p>
       </section>
 
