CVPR'18 code available
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/0131.pdf">pdf</a>]
               [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/Supplemental/0131-supp.pdf">supp</a>]
               [<a target="_blank" href="https://www.youtube.com/watch?v=MNEZACbFA4Y">demo</a>]
-              [<a target="_blank" href="https://github.com/dluvizon/deephar">code</a> will appear soon]
+              [<a target="_blank" href="https://github.com/dluvizon/deephar">code</a>]
               [<a target="_blank" href="data/cvpr_2018/bib.txt">bibtex</a>]
             </p>
           </article>
