Add teaching for the Master's course at ENSEA
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <a href="#publications">Publications</a></br>
           <!--<a href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" target="_blank">Google scholar</a></br>-->
           <a href="#code">Code</a></br>
+          <a href="#teaching">Teaching</a></br>
           <a href="#contact">Contact</a>
         </nav>
 
@@ -174,6 +175,17 @@
         <a href="https://github.com/dluvizon" target="_blank">github</a>.
         Otherwise, a link will appear in my
         <a href="#publications">publications</a>.</p>
+      </section>
+
+      <!-- Teaching -->
+      <section id="teaching">
+        <h2>Teaching</h2>
+        <h3>Master (ENSEA)</h3>
+        <p>UEC-1-IMD Int. images et multimedia</p>
+        <ul>
+          <li>Action recognition from skeletons, VLAD, and LMNN: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/Master_Interpretation_Images_PHD.pdf" target="_blank">slides</a></li>
+          <li>Intro. to Neural Networks and Deep Learning: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/NN_and_DeepLearning2.pdf" target="_blank">slides</a></li>
+        </ul>
       </section>
 
       <!-- Contact -->
