Add slides for GANs
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <ul>
           <li>Action recognition from skeletons, VLAD, and LMNN: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/Master_Interpretation_Images_PHD.pdf" target="_blank">slides</a></li>
           <li>Intro. to Neural Networks and Deep Learning: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/NN_and_DeepLearning2.pdf" target="_blank">slides</a></li>
+          <li>Intro. to Generative Adversarial Networks: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/GANs.pdf" target="_blank">slides</a></li>
         </ul>
       </section>
 
