--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
           <li>Action recognition from skeletons, VLAD, and LMNN: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/Master_Interpretation_Images_PHD.pdf" target="_blank">slides</a></li>
           <li>Intro. to Neural Networks and Deep Learning: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/NN_and_DeepLearning2.pdf" target="_blank">slides</a></li>
           <li>Intro. to Generative Adversarial Networks: <a href="http://perso-etis.ensea.fr/luvizon/pluxml/GANs.pdf" target="_blank">slides</a></li>
+          <li>IA et Big Data: TP GANs 2018-2019 <a href="http://perso-etis.ensea.fr/luvizon/pluxml/tp_gans.pdf" target="_blank">link</a></li>
         </ul>
       </section>
 
