Update bio and add cag paper
Signed-off-by: Diogo Luvizon <diogo@luvizon.com>

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Diogo C. Luvizon</title>
-    <meta name="author" content="Diogo C. Luvizon" />
+    <title>Diogo Carbonera Luvizon</title>
+    <meta name="author" content="Diogo Carbonera Luvizon" />
     <meta name="description" content="Luvizon's web page" />
-    <meta name="Copyright" content="Diogo C. Luvizon" />
+    <meta name="Copyright" content="Diogo Carbonera Luvizon" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -42,12 +42,12 @@
     <header id="header">
       <div class="inner">
         <a href="#" class="image avatar"><img src="images/photo.jpeg" alt="" /></a>
-        <h1>Diogo C. Luvizon</h1>
-        <p>PhD Student at the <a target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS lab</a> / <br />
-        <a target="_blank" href="http://www.u-cergy.fr" class="icon">Université de Cergy-Pontoise</a>.</p>
+        <h1>Diogo C Luvizon</h1>
+        <p>AI Researcher</p>
 
         <nav></br>
           <a href="#vitae">Vitae</a></br>
+          <a href="#news">News</a></br>
           <a href="#publications">Publications</a></br>
           <!--<a href="https://scholar.google.com/citations?user=VZ1Q5v4AAAAJ&hl=fr&oi=ao" target="_blank">Google scholar</a></br>-->
           <a href="#code">Code</a></br>
@@ -66,20 +66,21 @@
           <h2>About me</h2>
         </header>
 
-        <p>I am currently PhD candidate (on the last year) jointly at the <a
+        <p>
+        I received my PhD in Computer Vision and Machine Learning from Paris Seine Université (Université de Cergy-Pontoise), France, in 2019.
+        My thesis was developed in the <a
           target="_blank" href="http://www-etis.ensea.fr" class="icon">ETIS
-          lab</a>
-        and at the Paris Seine Université (Université de Cergy-Pontoise),
-        France, since 2015, under the supervision of <a target="_blank"
+          lab</a> under the supervision of <a target="_blank"
         href="http://perso-etis.ensea.fr/~picard" class="icon">David Picard</a>
         and <a target="_blank" href="http://perso-etis.ensea.fr/tabia"
-        class="icon">Hedi Tabia</a>. I am also supported by the Brazilian
+        class="icon">Hedi Tabia</a> and supported by the Brazilian
         National Council for Scientific and Technological Development (CNPq).  I
-        received my Master's degree on Applied Computing (Graphics and Computer
+        received my Master's degree in Applied Computing (Graphics and Computer
         Vision) from PPGCA, Federal University of Technology - Paraná (UTFPR),
         Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
-        from UTFPR, in 2011.  In between, I have worked in industry
+        also from UTFPR, in 2011.  In between, I have worked in industry
         with computer vision applied to embedded and real time systems.
+        Curently, I work as Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
 
         <h2>Research interests</h2>
         <p>My research interests are mainly on computer vision and machine
@@ -100,8 +101,19 @@
         <div>
 
           <article class="6u 12u$(xsmall) work-item">
+            <h3>Human pose regression by combining indirect part detection and contextual information</h3>
+            <a href="https://arxiv.org/pdf/1710.02322" target="_blank" class="image fit thumb"><img src="images/cg_2019/cag.png" alt="" /></a>
+            <p><b>Diogo C. Luvizon, Hedi Tabia, David Picard</b>; <i>Computers & Graphics</i>. 2019</p>
+            <p>
+              [<a target="_blank" href="https://arxiv.org/pdf/1710.02322.pdf">pdf</a>]
+              [<a target="_blank" href="https://github.com/dluvizon/pose-regression">code</a>]
+              [<a target="_blank" href="data/cg_2019/bib.txt">bibtex</a>]
+            </p>
+          </article>
+
+          <article class="6u 12u$(xsmall) work-item">
             <h3>2D/3D Pose Estimation and Action Recognition Using Multitask Deep Learning</h3>
-            <a href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/0131.pdf" target="_blank" class="image fit thumb"><img src="images/cvpr_2018/pic.svg" alt="" /></a>
+            <a href="http://openaccess.thecvf.com/content_cvpr_2017/CameraReady/0131.pdf" target="_blank" class="image fit thumb"><img src="images/cvpr_2018/pic.svg" alt="" /></a>
             <p><b>Diogo C. Luvizon, David Picard, Hedi Tabia</b>; <i>The IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</i>. 2018</p>
             <p>
               [<a target="_blank" href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/0131.pdf">pdf</a>]
@@ -217,7 +229,7 @@
             <li><a href="http://lattes.cnpq.br/9871965222373987" target="_blank" class="icon">Lattes<span class="label">Lattes</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Copyright Diogo Carbonera Luvizon, 2018.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Copyright Diogo Carbonera Luvizon, 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
