--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
         class="icon">Hedi Tabia</a> and supported by the Brazilian
         National Council for Scientific and Technological Development (CNPq).  I
         received my Master's degree in Applied Computing (Graphics and Computer
-        Vision) from PPGCA, Federal University of Technology - Paraná (UTFPR),
+        Vision) from the Federal University of Technology - Paraná (UTFPR),
         Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
-        also from UTFPR, in 2011.  In between, I have worked in industry
+        also from the UTFPR, in 2011.  In between, I have worked
         with computer vision applied to embedded and real time systems.
-        Curently, I work as Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
+        Currently, I am AI Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
 
         <h2>Research interests</h2>
         <p>My research interests are mainly on computer vision and machine
