--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="inner">
         <a href="#" class="image avatar"><img src="images/photo.jpeg" alt="" /></a>
         <h1>Diogo C Luvizon</h1>
-        <p>AI Researcher</p>
+        <p>Computer Vision Researcher</p>
 
         <nav></br>
           <a href="#vitae">Vitae</a></br>
@@ -81,12 +81,11 @@
         Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
         also from the UTFPR, in 2011.  In between, I have worked
         with computer vision applied to embedded and real time systems.
-        Currently, I am AI Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
+        Currently, I am a Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
 
         <h2>Research interests</h2>
-        <p>My research interests are mainly on computer vision and machine
-        learning, specially applied to 3D scenes and to human behaviour
-        understanding.
+        <p>My research interests are mainly on computer vision and deep
+        learning, specially applied to 3D scenes and humans.
         </p>
 
         <ul class="actions">
