--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         Brazil, in 2015, and my Bachelor's degree in Electronics Engineering
         also from the UTFPR, in 2011.  In between, I have worked
         with computer vision applied to embedded and real time systems.
-        Currently, I am a Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
+        Currently, I am Researcher at <a href="https://research.samsung.com/srbr">Samsung R&D Institute Brazil</a>.
 
         <h2>Research interests</h2>
         <p>My research interests are mainly on computer vision and deep
